--- a/layout_marathon/css/style.css
+++ b/layout_marathon/css/style.css
@@ -138,4 +138,45 @@ a {
     opacity: 1;
 }
 
+.specialised {
+    padding: 55px 0 93px ;
+    background-image: url(../images/special-bg.svg) ;
+    background-position: left bottom;
+    background-repeat: no-repeat;
+    color: #202020;
+    text-align: center;
+}
 
+.specialised__title {
+    margin-bottom: 96px;
+}
+.title {
+    font-size: 35px;
+    line-height: 45px;
+    text-align: center;
+    font-weight: 700;
+    
+}
+.specialised__items {
+    display: flex;
+    justify-content: space-between;
+    max-width: 980px;
+    margin: 0 auto;
+}
+.specialised__item {
+    width: 280px;
+}
+.specialised__item-img {
+    margin-bottom: 23px;
+    min-height: 159px;
+}
+.specialised__item-title {
+    margin-bottom: 11px;
+    font-size: 20px;
+    font-weight: 700;
+}
+.specialised__item-text {
+    padding: 0 10px;
+    color: #272727;
+    opacity: 0.7;
+}
