--- a/layout_marathon/css/style.css
+++ b/layout_marathon/css/style.css
@@ -116,6 +116,7 @@ a {
     position: absolute;
     right: 0;
     top: 50%;
+    transform: translateY(-50%);
 }
 
 .header-dots button {
@@ -179,4 +180,428 @@ a {
     padding: 0 10px;
     color: #272727;
     opacity: 0.7;
+}
+
+.advantages {
+    padding-top: 64px;
+    background-color: #F4F9FD;
+    background-image: url(../images/advantages.svg);
+    background-repeat: no-repeat;
+    background-position: center right;
+}
+
+.advantages-box {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 76px;
+    
+}
+
+.advantages-box--right .advantages-box__info {
+order: 1;
+background-image: url(../images/title-bg-2.svg);
+background-repeat: no-repeat;
+background-position: 22px 130px;
+}
+.advantages-box__info {
+    max-width: 456px;
+    padding-top: 60px;
+    background-image: url(../images/title-bg-1.svg);
+    background-repeat: no-repeat;
+    background-position: 22px 76px;
+}
+
+.advantages-box__info--bg {
+    background-image: url(../images/title-bg-3.svg);
+    background-position: 5px 105px;
+}
+.advantages-box__title {
+    color: #202020;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 45px;
+    padding: 68px 0 15px 48px;
+    padding-left: 48px;
+
+}
+.advantages-box__text {
+    padding-left: 48px;
+    color: #272727;
+}
+
+.advantages-box__text p {
+    margin: 12px 0;
+}
+.advantages-box__images {
+}
+
+.reviews {
+    background-image: url(../images/reviews-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+    padding: 38px 0 82px;
+}
+
+.reviews__title {
+    color: #fff;
+    margin: 0 auto 48px;
+    max-width: 394px;
+}
+.reviews__items {
+    max-width: 940px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+.reviews__item {
+    width: 300px;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, .2);
+    padding: 35px 20px;
+    color: #fff;
+}
+.reviews__item-head {
+    margin-bottom: 13px;
+    display: flex;
+}
+.reviews__item-head img {
+    border-radius: 50%;
+    margin-right: 20px;
+}
+.reviews__item-info {
+}
+.reviews__item-name {
+    font-weight: 600;
+}
+.reviews__item-position {
+    opacity: .5;
+}
+.reviews__item-text {
+    text-align: center;
+    padding-top: 39px;
+    position: relative;
+}
+
+.reviews__item-text::before {
+    content: '“';
+    font-size: 40px;
+    line-height: 55px;
+    font-weight: 700;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+.footer__inner {
+    display: flex;
+    justify-content: space-between;
+    color: #272727;
+    padding: 20px 40px 17px;
+}
+.footer__link a+a {
+    margin-left: 20px;
+}
+
+@media (max-width: 1620px) {
+.advantages {
+    background-image: none;
+}
+}
+
+@media (max-width: 1201px) {
+    .specialised {
+        background-size: 50px;
+    }
+}
+@media (max-width: 1190px) {
+    .header-slider__item-images {
+        margin: 50px 20px 0 0;
+    }
+
+    .header-slider__item-images img {
+        width: 80%;
+    }
+
+    .header-slder__item-info {
+        padding: 50px 0;
+    }
+    .header-slider {
+        padding-top: 25px;
+    }
+
+    .advantages-box__images {
+        text-align: center;
+    }
+
+    .advantages-box__images img {
+        width: 80%;
+
+    }
+
+    .advantages-box {
+        justify-content: space-around;
+    }
+
+    .advantages-box--right .advantages-box__title {
+        padding: 30px 0 15px 20px;
+    }
+
+    .advantages-box--right .advantages-box__text {
+        padding-left: 20px;
+    }
+
+    .advantages-box--right .advantages-box__info {
+        padding-right: 20px;
+    }
+}
+
+@media (max-width: 1080px) {
+    .specialised {
+        background-image: none;
+    }
+
+    .advantages-box__info {
+        padding-right: 10px;
+    }
+
+    .advantages-box__images img {
+        width: 70%;
+        margin-top: 40px;
+
+    }
+
+    .reviews__items {
+        flex-wrap: wrap;
+
+    }
+
+    .reviews__item {
+        width: 48%;
+        margin-bottom: 25px;
+    }
+
+
+@media (max-width: 900px) {
+    .header-slider__item-images {
+        display: none;
+    }
+
+    .advantages-box--right .advantages-box__info {
+        padding-top: 10px;
+    }
+}
+
+
+@media (max-width: 924px) {
+
+.header__top {
+     flex-wrap: wrap;
+     
+}
+
+.header-btn {
+    width: 100%;
+    text-align: right;
+}
+
+.login {
+    margin-right: 30px;
+}
+
+}
+
+@media (max-width: 858px) {
+    .advantages-box__info {
+        max-width: 100%;
+    }
+
+    .advantages-box {
+        flex-wrap: wrap;
+    }
+
+    .advantages-box--right .advantages-box__info {
+        order: 0;
+    }
+
+    .advantages {
+        padding-top: 0;
+    }
+
+    .advantages-box__images img {
+        width: 100%;
+
+    }
+}
+
+@media (max-width: 775px) {
+.specialised {
+    padding: 20px 0 40px;
+}
+
+.specialised__title {
+    margin-bottom: 40px;
+}
+
+.specialised__items {
+    flex-wrap: wrap;
+}
+
+.specialised__item {
+    width: 50%;
+    margin-bottom: 20px;
+}
+}
+
+@media (max-width: 685px) {
+    .reviews__items {
+        display: block;
+
+    }
+
+    .reviews__item {
+        width: 100%;
+        margin-bottom: 25px;
+    }
+
+    .reviews {
+        padding: 38px 0;
+    }
+
+}
+@media (max-width: 620px) {
+.footer__inner {
+    display: block;
+    text-align: center;
+    padding: ;
+}
+
+.footer__link {
+    margin-bottom: 10px;
+}
+}
+@media (max-width: 570px) {
+    .menu__list {
+
+        display: none;
+        position: absolute;
+        top: 120px;
+        width: 100%;
+        left: 0;
+        text-align: center;
+        background-color: #1a50a8;
+        z-index: 5;
+    }
+
+    .menu__list li+li {
+        padding-left: 0;
+    }
+
+    .menu__list a {
+        display: block;
+        padding: 10px 0;
+    }
+
+
+    .menu__btn {
+        position: relative;
+        width: 30px;
+        height: 20px;
+        
+    }
+
+    .menu__btn span {
+        
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    top: 9px;
+    position: absolute;
+
+    }
+
+
+
+    .menu__btn::after,
+    .menu__btn::before {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    position: absolute;
+
+    }
+
+    .menu__btn::after {
+    top: 0;
+    }
+
+    .menu__btn::before {
+    bottom: 0;
+    }
+
+    .header-slder__item-info {
+        padding: 10px 30px 10px 0;
+    }
+
+    .header {
+        min-height: 582px;
+    }
+
+    .header-slider__description {
+        margin-bottom: 20px;
+        font-size: 20px;
+        line-height: 35px;
+    }
+
+    .header-slider__title {
+        
+        font-size: 35px;
+        line-height: 45px;
+        
+    }
+
+    .specialised__items {
+        display: block;
+    }
+    
+    .specialised__item {
+        width: 100%;
+    }
+
+    .title {
+        font-size: 30px;
+        line-height: 40px;
+    }
+
+    .advantages-box__title {
+        line-height: 40px;
+        font-size: 30px;
+        padding: 68px 0 15px 0;
+    }
+
+    .advantages-box__text {
+        padding-left: 0;
+    }
+
+    .advantages-box--right .advantages-box__title {
+        padding: 30px 0 15px 0;
+    }
+
+    .advantages-box--right .advantages-box__text {
+        padding-left: 0;
+    }
+
+}
+
+
+
+
+
+@media (min-width: 571px) {
+    .menu__list {
+        display: flex!important;
+    }
+
 }
